Saving version that was made before using  Bootstrap components

--- a/index.html
+++ b/index.html
@@ -35,5 +35,9 @@
             </section>
             
         </div>
+
+        <footer>
+            <h4>Copyright Mars Concepts LLC 2019</h4>
+        </footer>
     </body>
 </html>
